--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "cjx-zdy-ui": "^1.0.0",
     "lint-staged": "^13.1.2",
+    "moment": "^2.29.4",
     "vue": "^3.2.45"
   },
   "lint-staged": {
@@ -43,10 +46,14 @@
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^30.0.1",
     "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint-config-standard-vue": "^1.0.0",
     "stylelint-prettier": "^3.0.0",
     "stylelint-scss": "^4.4.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vue-tsc": "^1.0.24"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
